[package]
name = "chatter"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Lagerwaard <stephanlagerwaard@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.2.0", features = ["http", "axum"] }
worker-macros = { version = "0.2.0", features = ["http"] }
axum = { version = "0.7", default-features = false, features = [
  "json",
  "macros",
] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
anyhow = "1.0.86"
serde_json = "1.0.121"
serde = "1.0.204"
